--- a/React Docs/Props/src/App.css
+++ b/React Docs/Props/src/App.css
@@ -14,3 +14,24 @@
 .avatar {
   border-radius: 100px;
 }
+
+img {
+  object-fit: cover;
+}
+
+.article {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+
+.card {
+  border: 2px solid #555;
+  width: fit-content;
+}
+
+.card-content {
+  padding-inline: 1rem;
+}
