example of choosing state structure

--- a/React Docs/StateStructure/src/App.css
+++ b/React Docs/StateStructure/src/App.css
@@ -1,42 +1,60 @@
 .App {
-  text-align: center;
+  display: grid;
+  place-content: center;
+  height: 100%;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ready-for-trail {
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul,
+h1,
+h2 {
+  padding: 0;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul li {
+  list-style: none;
+  margin-block: 0.625rem;
 }
 
-.App-link {
-  color: #61dafb;
+h1,
+h2 {
+  margin-bottom: 1.25rem;
+  font-weight: 600;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button,
+input {
+  display: inline-block;
+  margin-left: 10px;
+  padding: 0.4rem 0.875rem;
+  outline: none;
+  border: none;
+  border-radius: 3px;
 }
 
-button {
-  font-size: calc(10px + 2vmin);
+input {
+  border: 1px solid #ccc;
+}
+
+button:hover,
+input:focus {
+  outline: 1px solid #ccc;
+}
+
+.add-btn {
+  background-color: rgb(83, 156, 83);
+  color: #fff;
+}
+
+.delete-btn {
+  background-color: rgb(221, 85, 35);
+  color: #fff;
 }
